# breathing-money

./: .gitignore  Cargo.toml  README.md  quantum_additions_draft.md
docs/: breathing_money_v09.md  breathing_money_v09_chinese.md  consensus_math_appendix.md  errata.md  thread_op_draft.md
src/: lib.rs  main.rs
src/chain/: mod.rs
src/consensus/: mod.rs
src/crypto/: mod.rs
src/miner/: mod.rs
src/monetary/: mod.rs
src/storage/: mod.rs
src/types/: mod.rs
